// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should give ExpensesSummary component with 1 expense 1`] = `
<div>
  <h3>
    viewing 
    1
     
    expense
     totalling 
    $2.35
  </h3>
</div>
`;

exports[`should give ExpensesSummary component with multiple expenses 1`] = `
<div>
  <h3>
    viewing 
    23
     
    expenses
     totalling 
    $23,532,523,355.66
  </h3>
</div>
`;
